--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=68"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "gads-etl"
 version = "0.1.0"
@@ -11,22 +15,27 @@ dependencies = [
     "typer>=0.12.3",
     "pyyaml>=6.0.1",
     "dotenv>=0.9.9",
+    "tabulate>=0.9.0",
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest>=8.2.0",
     "pytest-cov>=5.0.0",
+    "tabulate>=0.9.0",
 ]
 
 [project.scripts]
 gads-etl = "gads_etl.cli:app"
 
+[tool.uv]
+package = true
+
 [tool.setuptools]
-package-dir = {"" = "app/python-etl"}
+package-dir = {"" = "src"}
 
 [tool.setuptools.packages.find]
-where = ["app/python-etl"]
+where = ["src"]
 
 [tool.pytest.ini_options]
 addopts = "-ra -m 'not integration'"
@@ -35,5 +44,5 @@ markers = [
     "integration: tests that call external services and require credentials",
 ]
 pythonpath = [
-    "app/python-etl",
+    "src",
 ]
