--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "pyyaml>=6.0.1",
     "dotenv>=0.9.9",
     "tabulate>=0.9.0",
+    "boto3>=1.34.0",
 ]
 
 [project.optional-dependencies]
@@ -42,6 +43,7 @@ addopts = "-ra -m 'not integration'"
 testpaths = ["tests"]
 markers = [
     "integration: tests that call external services and require credentials",
+    "minio: tests that require a running MinIO instance",
 ]
 pythonpath = [
     "src",
