chore(packaging): lock canonical venv workflow, fix src discovery, and harden imports
- Fix setuptools package discovery for src/ layout (include gads_etl*)
- Remove pytest pythonpath hacks and sys.path mutations
- Enforce venv + editable install workflow via conftest guards
- Update README with canonical setup and daily dev loop
- Disallow uv run and local path imports
- Restructure CLI backfill command grouping
- Add boto3 runtime dependency and clean object sink artifact

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ package-dir = {"" = "src"}
 
 [tool.setuptools.packages.find]
 where = ["src"]
+include = ["gads_etl*"]
 
 [tool.pytest.ini_options]
 addopts = "-ra -m 'not integration'"
@@ -46,5 +47,4 @@ markers = [
     "minio: tests that require a running MinIO instance",
 ]
 pythonpath = [
-    "src",
 ]
